// Generated by github.com/davyxu/tabtoy
// DO NOT EDIT!!
// Version: 3.1.4
syntax = "proto3";
package desc;


enum ActorType
{	
	None = 0; //  
	Pharah = 1; // 法鸡 
	Junkrat = 2; // 狂鼠 
	Genji = 3; // 源氏 
	Mercy = 4; // 天使 
}


message ExampleData
{ 
	int32 ID = 1; // 任务ID 
	int32 ID2 = 2; // 任务ID2 
	string Name = 3; // 名称 
	float Rate = 4; // 比例 
	double Accuracy = 5; // 精度 
	ActorType Type = 6; // 类型 
	repeated int32 Skill = 7; // 技能列表 
	int32 Buff = 8; // 增益 
	repeated string TagList = 9; // 标记 
	repeated int32 Multi = 10; // 多列 
}

message ExtendData
{ 
	float Additive = 1; // 附加 
	int32 Index2 = 2; // 索引2 
}

message ExampleKV
{ 
	string ServerIP = 1; // 服务器IP 
	uint32 ServerPort = 2; // 服务器端口 
	repeated int32 GroupID = 3; // 分组 
}


// Combine struct
message Table
{	
	repeated ExampleData ExampleData = 1; // table: ExampleData 
	repeated ExtendData ExtendData = 2; // table: ExtendData 
	repeated ExampleKV ExampleKV = 3; // table: ExampleKV 
}

